fixed bottom visibility

--- a/stylesheets/contributors.css
+++ b/stylesheets/contributors.css
@@ -18,7 +18,7 @@
 .visible {
   font-weight: 600;
   overflow: hidden;
-  height: 40px;
+  height: 50px;
   padding: 0 40px;
 }
 .visible:before {
